# nrxrdct

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: docs.yml
api/fluorescence/: index.html
api/integration/: index.html
api/io/: index.html
api/nmf/: index.html
api/parameters/: index.html
api/peakfit/: index.html
api/plotting/: index.html
api/powder/: index.html
api/preprocessing/: index.html
api/reconstruction/: index.html
api/refine_dict/: index.html
api/refinement/: index.html
api/roi/: index.html
api/sinogram/: index.html
api/slurm_integration/: index.html
api/slurm_reconstruction/: index.html
api/utils/: index.html
api/visualization/: index.html
api/volume/: index.html
docs/: index.md  installation.md
docs/api/: fluorescence.md  integration.md  io.md  laue.md  nmf.md  parameters.md  peakfit.md  plotting.md  powder.md  preprocessing.md  reconstruction.md  refine_dict.md  refinement.md  roi.md  s3dxrd.md  sinogram.md  slurm_integration.md  slurm_reconstruction.md  utils.md  visualization.md  volume.md
docs/css/: custom.css
docs/examples/: slurm_pipeline.md
docs/user-guide/: azimuthal_integration.md  fitting.md  fluorescence.md  gpu.md  laue_darwin.md  laue_grain_map_merge.md  laue_image_refinement.md  laue_layered_structures.md  laue_orientation_plotting.md  laue_rod_tangency.md  laue_segmentation.md  laue_strain.md  laue_stress.md  laue_theory.md  laue_theory_refs.md  powder.md  quickstart.md  (+6 more)
installation/: index.html
search/: search_index.json
(+147 files in other folders)
